[package]
name = "utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hyper = { version = "0.14.25", features = ["full"] }
rand = "0.8.5"
signal-child = "1.0.5"
tokio = { version = "1.26.0", features = ["full"] }
